# strawberry_detector

./: CMakeLists.txt  README.md  package.xml
config/: rosconsole.conf
launch/: strawberry_detector.launch
scripts/img_proc/: detector.py  img_proc.py
srv/: StwPose.srv
